<resources>
    <string name="app_name">Elysia</string>
    <string name="add_task">Добавить задачу</string>
    <string name="my_tasks">Мои задачи</string>
    <string name="clToEntr">Нажмите, чтобы войти</string>
    <string name="clToUpdate">Нажмите, чтобы изменить</string>
    <string name="complete">Выполнено</string>
    <string name="noComplete">Не завершено</string>
    <string name="profile">Профиль</string>
    <string name="calendar">Календарь</string>
    <string name="tasks">Задачи</string>
    <string name="statistics">Статистика</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="singIn">Войти</string>
    <string name="singUp">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="newPassword">Новый пароль</string>
    <string name="oldPassword">Старый пароль</string>
    <string name="checkPassword">Проверка пароля</string>
    <string name="login">Логин</string>
    <string name="typeTheTask">Название задачи</string>
    <string name="description">Описание</string>
    <string name="addEvent">Добавить событие</string>
    <string name="event">Cобытие</string>
    <string name="notes">Заметки</string>
    <string name="addFiles">Добавить файлы</string>
    <string name="Notes">Заметки</string>
    <string name="myData">Мои данные</string>
    <string name="saveChange">Сохранить изменения</string>
    <string name="rememberMe">Запомнить меня</string>
    <string name="themeApp">Тема приложения</string>
    <string name="exitAccount">Выйти из аккаунта</string>
    <string name="notification">Уведомление</string>
    <string name="dateCreate">Дата создания:</string>
    <string name="dateFinish">Дата окончания:</string>
    <string name="state">Статус:</string>
    <string name="exitFromAcc">Выход из аккаунта</string>
    <string name="lengthPassNotValid">Пароль должен содержать минимум 6 символов</string>
    <string name="passwordsMatch">Новый пароль совпадает со старым</string>
    <string name="changePassSucsses">Пароль успешно изменён</string>
    <string name="changePassNoSucsses">Пароль не изменён</string>
    <string name="oldPassNotValid">Указанный пароль неверный</string>
    <string name="nameChangeSuc">Имя пользователя успешно изменено</string>
    <string name="changeTheme">Тема приложения была изменена</string>
    <string name="changeDateTime">Выбор даты и времени</string>
    <string name="changeDate">Выбор даты</string>
    <string name="createTask">Создание задачи</string>
    <string name="createEvent">Создание события</string>
    <string name="changeNotSave">Изменения не были сохранены</string>
    <string name="deleteNote">Удалить заметку?</string>
    <string name="createAch">Создать цель</string>
    <string name="editAch">Редактировать цель</string>
    <string name="achievement">Цель</string>
    <string name="choiseAchievement">Выбор цели:</string>
    <string name="notSucssesUpdateName">Ошибка обновления имени. Попробуйте позже!</string>
    <string name="notValidEmail">Почта не валидна</string>
    <string name="notValidPassword">Длина пароля должна быть от 6 символов</string>
    <string name="notMatchPassword">Пароли не совпадают</string>
    <string name="notValidogin">Логин пустой</string>

</resources>