<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createEvent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textColor="?colorOnPrimary"
        android:textSize="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/event">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:id="@+id/checkBoxEvent"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:buttonTint="?colorPrimary"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textColor="?colorPrimary"
        android:text="@string/notification"
        android:scaleX="1.50"
        android:scaleY="1.50"/>
</LinearLayout>