<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="?colorOnPrimary"
        android:textSize="32dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="4dp"
        android:layout_gravity="center_vertical"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="4dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_password"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/registration_linerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeWidth="4dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            android:hint="@string/checkPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password2_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeWidth="4dp"
            app:startIconDrawable="@drawable/ic_login"
            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="?colorPrimary"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:text="@string/rememberMe"
        android:scaleX="1.50"
        android:scaleY="1.50"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_btn"
        android:layout_height="70dp"
        android:layout_width="250dp"
        android:text = "@string/singIn"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:textColor="?colorPrimary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="?colorPrimary"
        app:strokeWidth="4dp"
        android:layout_marginTop="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_btn"
        android:layout_height="70dp"
        android:layout_width="250dp"
        android:text = "@string/registration"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:textColor="?colorPrimary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="4dp"
        android:layout_marginTop="5dp" />
</LinearLayout>