<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.elysia.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themeApp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="?colorOnPrimary"
        android:textSize="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/viewPurple"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/purple"
            android:layout_margin="6dp"
            android:clickable="true"
           />
        <View
            android:id="@+id/viewYellow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/yellow_dark"
            android:layout_margin="6dp"
            android:clickable="true" />
        <View
            android:id="@+id/viewGreen"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/green_dark"
            android:layout_margin="6dp"
            android:clickable="true" />
        <View
            android:id="@+id/viewBlue"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/blue_dark"
            android:layout_margin="6dp"
            android:clickable="true" />
        <View
            android:id="@+id/viewRed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/red_dark"
            android:layout_margin="6dp"
            android:clickable="true" />
        <View
            android:id="@+id/viewGrey"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/grey_dark"
            android:layout_margin="5dp"
            android:clickable="true" />
        <View
            android:id="@+id/viewMint"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/mint_dark"
            android:layout_margin="6dp"
            android:clickable="true" />
        <View
            android:id="@+id/viewOrange"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/orange_dark"
            android:layout_margin="6dp"
            android:clickable="true" />
        <View
            android:id="@+id/viewLightBlue"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/lblue_dark"
            android:layout_margin="6dp"
            android:clickable="true" />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="?colorPrimaryVariant"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myData"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="?colorOnPrimary"
        android:textSize="24dp"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="4dp"
        android:layout_gravity="center_vertical"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="4dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_password"
        android:hint="@string/oldPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordOld_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="4dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_password"
        android:hint="@string/newPassword"
        android:drawableEnd="@drawable/create_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordNew_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="4dp"
        app:startIconDrawable="@drawable/ic_login"
        android:hint="@string/login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_height="70dp"
        android:layout_width="270dp"
        android:text = "@string/saveChange"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:textColor="?colorPrimary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="?colorPrimary"
        app:strokeWidth="4dp"
        android:layout_marginTop="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit_btn"
        android:layout_height="70dp"
        android:layout_width="250dp"
        android:text = "@string/exitAccount"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:textColor="?colorPrimary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="4dp"
        android:layout_marginTop="5dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="?colorPrimaryVariant"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>