<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
<ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:id="@+id/color1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?colorPrimary"
            android:visibility="gone"
            />
        <View
            android:id="@+id/color2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?colorPrimaryVariant"
            android:visibility="gone"
            />
    <androidx.cardview.widget.CardView
        android:id="@+id/profileCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryVariant">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:tint="?background"
            android:src="@drawable/ic_profile"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="34dp"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/clickTo"
                android:textColor="?colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clToEntr"
                android:layout_marginLeft="5dp"
                android:textSize="24dp"/>
        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/editProfile_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_tasks"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="?colorOnPrimary"
            android:textSize="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimaryVariant"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/completeTaskTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="?background"
                    android:textSize="34dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="?background"
                    android:textSize="22dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimaryVariant"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/noCompleteTaskTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="?background"
                    android:textSize="34dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/noComplete"
                    android:textColor="?background"
                    android:textSize="22dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="?colorPrimaryVariant"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="?colorOnPrimary"
            android:textSize="24dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:spinnerMode="dropdown"/>
                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/piechart"
                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="?colorPrimaryVariant" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>